// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default props Should match the snapshot 1`] = `
<div
  className="sc-bwzfXH hnDOSg"
>
  <div
    className="sc-gzVnrw eWSoAv sc-htpNat cNhtKB"
  >
    <div
      className="sc-bZQynM ecjQcB"
    >
      Candidatos
    </div>
    <div
      className="sc-bwzfXH hnDOSg"
    >
      <div
        className="sc-htpNat imFLbK"
      >
        <ul
          className="sc-ifAKCX bWcRRH"
        >
          <li
            className="title sc-EHOje kBbCrQ"
            href={null}
          >
            <a
              href={null}
            >
              Buscar vagas
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`When do not have title Should match the snapshot 1`] = `
<div
  className="sc-bwzfXH hnDOSg"
>
  <div
    className="sc-gzVnrw eWSoAv sc-htpNat cNhtKB"
  >
    <div
      className="sc-bwzfXH hnDOSg"
    >
      <div
        className="sc-htpNat imFLbK"
      >
        <ul
          className="sc-ifAKCX bWcRRH"
        >
          <li
            className="title sc-EHOje kBbCrQ"
            href={null}
          >
            <a
              href={null}
            >
              Buscar vagas
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
